--- a/ObservingProject_Student/ObservingProject_Part1_student.ipynb
+++ b/ObservingProject_Student/ObservingProject_Part1_student.ipynb
@@ -50,9 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "45332.96703296703 \"\n",
+      "1671.1544967032967 \"\n"
+     ]
+    }
+   ],
    "source": [
     "#Answer A) Here\n",
     "#You will need to use simple mathematical expressions and what you learned in class to find the asnwers to these.  \n",
@@ -61,9 +70,17 @@
     "\n",
     "#******************\n",
     "#part 1\n",
+    "f = 6.5*0.7\n",
+    "s = 206265/f\n",
+    "print(s,'\\\"')\n",
     "\n",
-    "\n",
-    "#part 2"
+    "#part 2\n",
+    "d = .000009\n",
+    "sp = d*s\n",
+    "Np = 4096\n",
+    "FOV = sp*Np\n",
+    "print(FOV,'\\\"')\n",
+    "\n"
    ]
   },
   {
@@ -330,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
